--- a/contact.html
+++ b/contact.html
@@ -119,14 +119,14 @@
         <a
           href="https://www.facebook.com/pages/category/Entertainment-Website/Cute-Cats-162212024341406/"
         >
-          <img src="images/icons/facebook.png" width="40px" height="40px" alt="" />
+          <img src="images/facebook.png" width="40px" height="40px" alt="" />
         </a>
       </li>
       <li>
         <a
           href="https://twitter.com/elonmusk?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
           ><img
-            src="images/icons/twitter.png"
+            src="images/twitter.png"
             style="margin-top: 4px;"
             width="35px"
             height="35px"
@@ -136,7 +136,7 @@
       <li>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           ><img
-            src="images/icons/youtube.png"
+            src="images/youtube.png"
             style="margin-top: 5px;"
             width="35px"
             height="35px"
